--- a/.editorconfig
+++ b/.editorconfig
@@ -6,15 +6,14 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 indent_style = space
-indent_size = 2
+indent_size = 4
 charset = utf-8
 trim_trailing_whitespace = true
 max_line_length = 120
 
 [*.{js,ts}]
 quote_type = single
-curly_bracket_next_line = false
-spaces_around_brackets = inside
+spaces_around_brackets = none
 indent_brace_style = BSD KNF
 
 # HTML
