--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,33 @@
 {
-  "compilerOptions": {
-    "moduleResolution": "node",
-    "module": "esnext",
-    "target": "es5",
-    "lib": [
-      "dom",
-      "es2018"
+    "compilerOptions": {
+        "moduleResolution": "node",
+        "module": "esnext",
+        "target": "es5",
+        "lib": [
+            "dom",
+            "es2018"
+        ],
+        "strict": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "suppressImplicitAnyIndexErrors": true,
+        "forceConsistentCasingInFileNames": true,
+        "sourceMap": true,
+        "outDir": "dist/esm5",
+        "declaration": true,
+        "declarationDir": "dist/types",
+        "declarationMap": true,
+        "resolveJsonModule": true,
+        "importHelpers": true,
+        "skipLibCheck": true
+    },
+    "include": [
+        "./src"
     ],
-    "strict": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "forceConsistentCasingInFileNames": true,
-    "jsx": "react",
-    // change this to any hyperscript like function that you're using
-    "jsxFactory": "React.createElement",
-    "sourceMap": true,
-    "outDir": "dist/esm5",
-    "declaration": true,
-    "declarationDir": "dist/types",
-    "declarationMap": true,
-    "stripInternal": true,
-    "resolveJsonModule": true,
-    "importHelpers": true
-  },
-  "include": [
-    "./src"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
-  "compileOnSave": false,
-  "buildOnSave": false
+    "exclude": [
+        "dist",
+        "node_modules"
+    ],
+    "compileOnSave": false,
+    "buildOnSave": false
 }
